# etbot

./: .env  .gitignore  Cargo.toml  README.md
config/: default.toml
migrations/: 20231017180454_initial_migration.sql  20250824211615_add_player_idle_time.sql
src/: main.rs
src/commands/: balance.rs  feeder.rs  flip.rs  give.rs  help.rs  leaderboard.rs  mod.rs  ping.rs  shared.rs
src/database/: mod.rs  players.rs
src/internal/: bot.rs  data.rs  database.rs  discord.rs  errors.rs  feeder.rs  handler.rs  mod.rs  model.rs  settings.rs  shared.rs
